2001-11-30  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 02599]
	* main.c comment reformat

2001-11-30  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02598]
	* url.c (otherinfo): add missing NULL

2001-11-30  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02597] (based on [w3m-dev 02594] by aito@fw.ipsj.or.jp)
	* fm.h (AcceptLang): added
	* fm.h (AcceptMedia): added
	* rc.c (CMT_ACCEPTENCODING): added
	* rc.c (CMT_ACCEPTMEDIA): added
	* rc.c (params9): add accept_encoding, accept_media
	* rc.c (sync_with_option): initialize AcceptEncoding and AcceptMedia
	* url.c (otherinfo): use Strcat_m_charp()

2001-11-30  aito@fw.ipsj.or.jp

	* [w3m-dev 02594]
	* configure: s/dcode/display_code/

2001-11-30  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02596]
	* file.c (acceptableEncoding): fix segfault if no decoder found

2001-11-30  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02595]
	* file.c (compression_decoder): add encodings
	* file.c (readHeader): use compression_decoder->encodings

2001-11-30  Tsutomu Okada <okada@furuno.co.jp>

	* [w3m-dev 02593]
	* form.h: comment reformat
	* matrix.c: ditto
	* menu.c: ditto
	* regex.c: ditto
	* table.h: ditto
	* terms.c: ditto

2001-11-30  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02592] Accept: and AcceptEncoding:
	* url.c (otherinfo): use acceptableEncoding() acceptableMimeTypes()

	* file.c: add compression_decoder
	* file.c (check_compress): rewrite by using compression_decoder
	* file.c (compress_application_type): ditto
	* file.c (uncompressed_file_type): ditto
	* file.c (check_command): added
	* file.c (acceptableEncoding): added
	* proto.h (acceptableEncoding): ditto
	* file.c (uncompress_stream): renamed from gunzip_stream
	* file.c (uncompress_stream): rewrite by using compression_decoder
	* configure: add PATH_SEPARATOR

	* mailcap.c (extractMailcapEntry): static
	* mailcap.c (loadMailcap): static
	* proto.h (loadMailcap): removed
	* mailcap.c (acceptableMimeTypes): added